# VaR-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260329_0001_baseline.py  20260404_0007_operator_runs.py  (+8 more)
config/: logging.yaml  risk_limits.yaml  settings.yaml
docs/: demo_checklist.md  demo_pitch.md  demo_runbook.md  mt5_sync_pipeline.md  mt5_v1_acceptance_runbook.md  observability_runbook.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
scripts/: build_returns.py  check_operator_runs_schema.py  check_storage_schema.py  compare_var_models.py  docker_up_safe.cmd  docker_up_safe.ps1  download_history.py  generate_frontend_api_types.py  make_report.py  plot_var_comparison.py  recette_checklist.md  run_backtest.py  run_backtest_var.py  run_live_var.py  run_mt5_agent.py  run_var_snapshot.py  score_var_models.py
tests/: support.py  test_alpha_codec.py  test_api.py  test_backtesting.py  test_capital.py  test_cli.py  test_data_cleaning.py  test_demo_smoke.py  test_garch.py  test_jobs_runner.py  test_mt5_agent_remote.py  test_mt5_execution_api.py  test_observability.py  test_operator_runs_migrations.py  test_platform_commands.py  test_pnl.py  test_risk_budget.py  test_risk_decision.py  test_risk_engine.py  test_schema_checks.py  test_serialization.py  test_storage.py  test_tick_archive.py  test_validation_alerts.py  test_var_models.py
(+227 files in other folders)
